err/linkexchange.zope.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/LinkExchange-0.4.egg-info'...
Listing './lib/python3.5/site-packages/LinkExchange.Zope-0.1.egg-info'...
Listing './lib/python3.5/site-packages/linkexchange'...
Listing './lib/python3.5/site-packages/linkexchange/clients'...
Compiling './lib/python3.5/site-packages/linkexchange/clients/linkfeed.py'...
***   File "./lib/python3.5/site-packages/linkexchange/clients/linkfeed.py", line 163
    except xml.sax.SAXParseException, e:
                                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/linkexchange/clients/sape.py'...
***   File "./lib/python3.5/site-packages/linkexchange/clients/sape.py", line 159
    except ClientError, e:
                      ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/linkexchange/commands'...
Compiling './lib/python3.5/site-packages/linkexchange/commands/lxrefresh.py'...
***   File "./lib/python3.5/site-packages/linkexchange/commands/lxrefresh.py", line 89
    except ConfigError, e:
                      ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/linkexchange/config.py'...
***   File "./lib/python3.5/site-packages/linkexchange/config.py", line 110
    ConfigParser.ParsingError), e:
                              ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/linkexchange/db_drivers.py'...
***   File "./lib/python3.5/site-packages/linkexchange/db_drivers.py", line 174
    except OSError, e:
                  ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/linkexchange/platform.py'...
***   File "./lib/python3.5/site-packages/linkexchange/platform.py", line 89
    except ClientError, e:
                      ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/linkexchange/utils.py'...
***   File "./lib/python3.5/site-packages/linkexchange/utils.py", line 60
    except ImportError, e:
                      ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/linkexchange/zope'...
Listing './lib/python3.5/site-packages/linkexchange/zope/Extensions'...
Compiling './lib/python3.5/site-packages/linkexchange/zope/support.py'...
***   File "./lib/python3.5/site-packages/linkexchange/zope/support.py", line 58
    except ConfigError, e:
                      ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
